MSC/5/deployment-postgre.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-postgre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgre
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
      - image: postgres:10.13
        name: postgre
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgre-hdd
