MSC/5/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redmine-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: redmine
          servicePort: 3000
